# BEMEWS

./: .gitignore  BEMEWS_example.py  EMEWS.cpp  EMEWS_example.py  LICENSE  README.md  config.ini  mixing_angles.cpp  output.EMEWS.cpp  output.h  pyproject.toml  setup.Mac.py  setup.py
.github/workflows/: build.yaml
src/: EMEWS.cpp  EMEWS.h  RK.EMEWS.cpp  input_class.EMEWS.cpp  input_class.h  mixing_angles.cpp  mixing_angles.h  output.EMEWS.cpp  output.h  output_matrix.EMEWS.cpp  parameters.cpp  parameters.h  update.EMEWS.cpp
src/BEMEWS/: __init__.py
src/BEMEWS/_ext/: BEMEWS.cpp  BEMEWS.h  RK.h  adiabatic_basis.h  eigenvalues.h  flavour_basis.h  input_class.BEMEWS.cpp  input_class.h  jacobians.h  mixing_angles.h  output.BEMEWS.cpp  output.h  output_matrix.BEMEWS.cpp  output_matrix.h  parameters.h  potentials.h  update.h
src/BEMEWS/_ext/mstl/: errors2.h
src/BEMEWS/_ext/mstl/math2/: number.h
src/BEMEWS/_ext/mstl/math2/algebra/: linear algebra function templates.cpp
src/BEMEWS/_ext/mstl/math2/analysis/: runge kutta.cpp
src/BEMEWS/_ext/mstl/math2/spline/: interpolation data member templates.cpp
src/BEMEWS/test/: test_00_init.py  test_01_run.py
src/EMEWS/: EMEWS.cpp  __init__.py  output.EMEWS.cpp  output.h  output_matrix.h  update.EMEWS.cpp
src/EMEWS/_ext/: EMEWS.cpp  RK.h  parameters.h  update.h
src/mstl/: functional2.h
src/mstl/math2/analysis/: special functions.cpp
